# graphic_editor

./: CMakeLists.txt  README.md
src/: AdjustmentPanel.cpp  AdjustmentPanel.h  FilterPanel.cpp  FilterPanel.h  ImageCanvas.cpp  ImageCanvas.h  ImageProcessor.cpp  ImageProcessor.h  MainWindow.cpp  MainWindow.h  ToolOptionsPanel.cpp  ToolOptionsPanel.h  main.cpp
